package smarthome.persistence;

import smarthome.domain.room.Room;
import smarthome.domain.vo.roomvo.RoomIDVO;

public interface RoomRepository extends Repository<RoomIDVO, Room>{
}
